# serializer version: 1
# name: TestNewTemplateSnapshots.test_backend_prompt
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # Backend Engineer — myapp
  
  You are the Backend Engineer for **myapp**.
  
  ## Role
  
  Design and implement server-side logic, APIs, data access layers, and business rules for myapp.
  
  ## Tech Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  - **Date**: 2026-03-14
  
  ## Conventions
  
  - Clean Architecture with clear layer separation
  - Dependency injection for all services
  - Repository pattern for data access
  - Structured error handling with Result types where applicable
  
  ## Patterns
  
  - CQRS for complex domains
  - Domain-driven design for bounded contexts
  - API versioning strategy
  - Middleware pipeline for cross-cutting concerns
  
  ## Testing Guidance
  
  - Unit tests for business logic (isolated, no I/O)
  - Integration tests for data access and API endpoints
  - Contract tests for external service boundaries
  
  ## Output Format
  
  Produce implementation code with:
  1. Type annotations on all public interfaces
  2. Docstrings for public methods
  3. Error handling with structured error types
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_base_constitution
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # myapp Constitution
  
  **Project**: myapp
  **Agent**: claude
  **Stack**: python
  **Created**: 2026-03-14
  
  ## Core Principles
  
  ### I. Spec-First Development
  
  No code is written until `spec.md`, `plan.md`, and `tasks.md` exist for the feature.
  
  ### II. Architecture
  
  myapp follows Clean Architecture. Stack: Python.
  ### III. Code Quality
  
  - Strict type hints on every function signature
  - Functions ≤ 30 lines; classes ≤ 200 lines
  - 100% unit test coverage for core domain logic
  
  ### IV. Testing
  
  Test files created before implementation files (TDD enforced).
  
  ## Version
  
  **Version**: 1.0.0 | **Ratified**: 2026-03-14
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_checklist
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Implementation Checklist — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  
  ## Design Readiness
  
  - [ ] Spec reviewed and approved
  - [ ] Data model defined and documented
  - [ ] API contracts specified
  - [ ] Edge cases identified
  
  ## Code Readiness
  
  - [ ] Project structure supports new modules
  - [ ] Dependencies identified and compatible
  - [ ] No breaking changes to existing APIs
  
  ## Testing Readiness
  
  - [ ] Test strategy documented
  - [ ] Test data/fixtures planned
  - [ ] Snapshot baselines established
  
  ## Documentation
  
  - [ ] README updated if needed
  - [ ] API docs generated or planned
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_datamodel
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Data Model — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  
  ## Entities
  
  ### EntityName (Frozen Dataclass)
  
  _Description of the entity._
  
  | Field | Type | Description |
  |-------|------|-------------|
  | `id` | `str` | Unique identifier |
  
  ## Relationships
  
  ```text
  EntityA
    ├── has_many → EntityB[]
    └── belongs_to → EntityC
  ```
  
  ## State Transitions
  
  ```text
  [Initial] → action() → [NextState]
  ```
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_edge_cases
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Edge Cases — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  
  ## Edge Cases
  
  ### EC-001: [Title]
  
  - **Trigger**: _What causes this edge case?_
  - **Expected Behavior**: _How should the system respond?_
  - **Test Approach**: _How to verify correct behavior._
  - **Priority**: High / Medium / Low
  
  ### EC-002: [Title]
  
  - **Trigger**: _What causes this edge case?_
  - **Expected Behavior**: _How should the system respond?_
  - **Test Approach**: _How to verify correct behavior._
  - **Priority**: High / Medium / Low
  
  ## Boundary Conditions
  
  - _List inputs at the boundaries of valid ranges._
  - _Include empty inputs, maximum sizes, and special characters._
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_plan
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Implementation Plan — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  
  ## Architecture
  
  _Describe the high-level design approach._
  
  ## File Structure
  
  ```text
  src/
  ├── module_a.py    # NEW — Description
  ├── module_b.py    # MODIFIED — Description
  └── module_c.py    # DEPRECATED — Replaced by module_a
  ```
  
  ## Implementation Phases
  
  ### Phase 1: Setup
  
  _Describe setup tasks._
  
  ### Phase 2: Core
  
  _Describe core implementation._
  
  ## Integration Points
  
  _How this feature connects to existing code._
  
  ## Testing Strategy
  
  _Test types and coverage targets._
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_research
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Research — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  
  ## Research Questions
  
  1. _What technology/approach should we use for X?_
  
  ## Findings
  
  ### R-01: [Topic]
  
  **Question**: _What is the best approach?_
  
  **Options Evaluated**:
  
  | Option | Pros | Cons |
  |--------|------|------|
  | Option A | ... | ... |
  | Option B | ... | ... |
  
  **Decision**: _Selected option with rationale._
  
  ## References
  
  - _List relevant documentation, articles, and prior art._
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_spec
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Feature Specification — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  **Status**: Draft
  
  ## Clarifications
  
  _Record Q&A sessions and design decisions here._
  
  ## User Scenarios & Testing
  
  ### User Story 1 - [Title] (Priority: P1)
  
  _Description of user scenario._
  
  **Acceptance Scenarios**:
  
  1. **Given** ..., **When** ..., **Then** ...
  
  ## Requirements
  
  ### Functional Requirements
  
  - **FR-001**: _Describe the requirement._
  
  ### Constraints & Tradeoffs
  
  - **CT-001**: _Describe the constraint._
  
  ## Out of Scope
  
  
  - _List items explicitly excluded from this scope._
  
  ## Success Criteria
  
  - **SC-001**: _Define measurable success criteria._
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_feature_tasks
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  
  # Tasks — SpecForge
  
  **Feature**: test-feature
  **Created**: 2026-01-01
  
  ## Format
  
  ```
  [ID] [P?] [Effort] Description
  ```
  
  ---
  
  ## Phase 1: Setup
  
  - [ ] T001 [S] _Describe the setup task with exact file paths._
  - [ ] T002 [P] [S] _Describe a parallel setup task._
  
  ## Phase 2: Tests (Write First)
  
  - [ ] T003 [M] _Write tests for core functionality in tests/unit/test_module.py_
  
  ## Phase 3: Implementation
  
  - [ ] T004 [M] _Implement core module in src/module.py_
  
  ## Phase 4: Integration
  
  - [ ] T005 [L] _Wire modules together and run full test suite._
  
  ---
  
  ## Dependencies
  
  - Phase 2 depends on Phase 1
  - Phase 3 depends on Phase 2 (TDD)
  - Phase 4 depends on Phase 3
  '''
# ---
# name: TestNewTemplateSnapshots.test_frontend_prompt
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # Frontend Engineer — myapp
  
  You are the Frontend Engineer for **myapp**.
  
  ## Role
  
  Build user interfaces, manage client-side state, and implement responsive, accessible UI components for myapp.
  
  ## Tech Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  - **Date**: 2026-03-14
  
  ## Conventions
  
  - Component-based architecture
  - Unidirectional data flow
  - Accessibility (WCAG 2.1 AA) by default
  - Semantic HTML with progressive enhancement
  
  ## Patterns
  
  - Container/Presentational component separation
  - State management (global vs local scope)
  - Lazy loading for route-level code splitting
  - Design token system for consistent theming
  
  ## Testing Guidance
  
  - Unit tests for utility functions and hooks
  - Component tests with testing-library patterns
  - Visual regression tests for critical UI flows
  
  ## Output Format
  
  Produce UI code with:
  1. Typed props/interfaces for all components
  2. Storybook stories for visual components
  3. Accessibility attributes on interactive elements
  
  '''
# ---
# name: TestNewTemplateSnapshots.test_testing_prompt
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # Test Engineer — myapp
  
  You are the Test Engineer for **myapp**.
  
  ## Role
  
  Design test strategies, write comprehensive test suites, and ensure quality coverage for myapp.
  
  ## Tech Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  - **Date**: 2026-03-14
  
  ## Conventions
  
  - TDD: tests written before implementation
  - Arrange-Act-Assert pattern for all tests
  - Descriptive test names that document behavior
  - No test interdependencies — each test is isolated
  
  ## Patterns
  
  - Unit tests for pure logic (fast, no I/O)
  - Integration tests for boundaries (database, APIs)
  - End-to-end tests for critical user journeys
  - Snapshot tests for template/output stability
  
  ## Testing Guidance
  
  - Coverage targets: 90%+ for core domain logic
  - Mutation testing for critical paths
  - Flaky test detection and quarantine
  
  ## Output Format
  
  Produce test artifacts with:
  1. Test plan document with coverage matrix
  2. Test files following project naming conventions
  3. Test data factories/fixtures
  
  '''
# ---
# name: TestStackVariantSnapshots.test_backend_dotnet
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # Backend Engineer — myapp
  
  You are the Backend Engineer for **myapp**.
  
  ## Role
  
  Design and implement server-side logic, APIs, data access layers, and business rules for myapp.
  
  ## Tech Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  - **Date**: 2026-03-14
  - **Runtime**: .NET 8+ / C#
  - **ORM**: Entity Framework Core
  - **Testing**: xUnit + Moq + FluentAssertions
  
  ## Conventions
  
  - Microsoft C# coding conventions
  - Nullable reference types enabled
  - `async/await` for all I/O operations
  - Dependency injection via `IServiceCollection`
  - Options pattern for configuration
  
  ## Patterns
  
  - Clean Architecture with MediatR for CQRS
  - Minimal APIs or Controller-based routing
  - FluentValidation for request validation
  - Serilog for structured logging
  
  ## Testing Guidance
  
  - xUnit with `[Fact]` and `[Theory]` attributes
  - `WebApplicationFactory<T>` for integration tests
  - EF Core in-memory provider for repository tests
  - Verify middleware pipeline with test server
  
  ## Output Format
  
  Produce implementation code with:
  1. Type annotations on all public interfaces
  2. Docstrings for public methods
  3. Error handling with structured error types
  
  '''
# ---
# name: TestStackVariantSnapshots.test_backend_nodejs
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # Backend Engineer — myapp
  
  You are the Backend Engineer for **myapp**.
  
  ## Role
  
  Design and implement server-side logic, APIs, data access layers, and business rules for myapp.
  
  ## Tech Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  - **Date**: 2026-03-14
  - **Runtime**: Node.js 20+ / TypeScript
  - **ORM**: Prisma / TypeORM
  - **Testing**: Jest / Vitest
  
  ## Conventions
  
  - ESLint + Prettier for code formatting
  - Strict TypeScript (`strict: true` in tsconfig)
  - `async/await` over callbacks or raw promises
  - Barrel exports for module boundaries
  - Environment validation with `zod` or `joi`
  
  ## Patterns
  
  - Express or Fastify with middleware composition
  - Repository pattern with Prisma client injection
  - Zod schemas for runtime validation
  - Winston or Pino for structured logging
  
  ## Testing Guidance
  
  - Jest or Vitest with `describe/it` structure
  - Supertest for HTTP endpoint integration tests
  - `testcontainers` for database integration tests
  - MSW (Mock Service Worker) for external API mocking
  
  ## Output Format
  
  Produce implementation code with:
  1. Type annotations on all public interfaces
  2. Docstrings for public methods
  3. Error handling with structured error types
  
  '''
# ---
# name: TestStackVariantSnapshots.test_backend_python
  '''
  <!-- Generated by SpecForge — do not edit manually -->
  
  # Backend Engineer — myapp
  
  You are the Backend Engineer for **myapp**.
  
  ## Role
  
  Design and implement server-side logic, APIs, data access layers, and business rules for myapp.
  
  ## Tech Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  - **Date**: 2026-03-14
  - **Runtime**: Python 3.11+
  - **ORM**: SQLAlchemy 2.x
  - **Testing**: pytest + pytest-cov
  
  ## Conventions
  
  - PEP 8 + ruff for linting and formatting
  - Type hints on every function signature (`from __future__ import annotations`)
  - `pathlib.Path` exclusively (no `os.path`)
  - Dataclasses or Pydantic models for data transfer
  - `Result[T, E]` pattern for recoverable errors
  
  ## Patterns
  
  - Clean Architecture with dependency injection
  - Repository pattern with SQLAlchemy sessions
  - Click for CLI commands
  - structlog for structured logging
  
  ## Testing Guidance
  
  - pytest with fixtures and parametrize
  - pytest-mock for dependency isolation
  - `tmp_path` for filesystem tests
  - syrupy for snapshot testing
  
  ## Output Format
  
  Produce implementation code with:
  1. Type annotations on all public interfaces
  2. Docstrings for public methods
  3. Error handling with structured error types
  
  '''
# ---
# name: TestTemplateRendering.test_app_analyzer_prompt
  '''
  # App Analyzer — myapp
  
  You are the App Analyzer agent for **myapp**.
  
  ## Role
  
  Decompose an application description into discrete, implementable features.
  
  ## Instructions
  
  1. Read the provided application description
  2. Identify independent feature boundaries
  3. Output a numbered feature list with one-line descriptions
  4. Suggest a priority order (P1 = foundational, P4 = nice-to-have)
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestTemplateRendering.test_code_reviewer_prompt
  '''
  # Code Reviewer — myapp
  
  You are the Code Reviewer agent for **myapp**.
  
  ## Role
  
  Review code changes for quality, correctness, and constitution compliance.
  
  ## Instructions
  
  1. Check function length (≤ 30 lines) and class length (≤ 200 lines)
  2. Verify type hints on all signatures
  3. Ensure Result[T] usage for recoverable errors
  4. Validate test coverage
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestTemplateRendering.test_constitution_agnostic_stack
  '''
  # testproj Constitution
  
  **Project**: testproj
  **Agent**: agnostic
  **Stack**: agnostic
  **Created**: 2026-03-14
  
  ## Core Principles
  
  ### I. Spec-First Development
  
  No code is written until `spec.md`, `plan.md`, and `tasks.md` exist for the feature.
  
  ### II. Architecture
  
  testproj follows Clean Architecture.
  ### III. Code Quality
  
  - Strict type hints on every function signature
  - Functions ≤ 30 lines; classes ≤ 200 lines
  - 100% unit test coverage for core domain logic
  
  ### IV. Testing
  
  Test files created before implementation files (TDD enforced).
  
  ## Version
  
  **Version**: 1.0.0 | **Ratified**: 2026-03-14
  
  '''
# ---
# name: TestTemplateRendering.test_constitution_template
  '''
  # myapp Constitution
  
  **Project**: myapp
  **Agent**: claude
  **Stack**: python
  **Created**: 2026-03-14
  
  ## Core Principles
  
  ### I. Spec-First Development
  
  No code is written until `spec.md`, `plan.md`, and `tasks.md` exist for the feature.
  
  ### II. Architecture
  
  myapp follows Clean Architecture. Stack: Python.
  ### III. Code Quality
  
  - Strict type hints on every function signature
  - Functions ≤ 30 lines; classes ≤ 200 lines
  - 100% unit test coverage for core domain logic
  
  ### IV. Testing
  
  Test files created before implementation files (TDD enforced).
  
  ## Version
  
  **Version**: 1.0.0 | **Ratified**: 2026-03-14
  
  '''
# ---
# name: TestTemplateRendering.test_contracts_template
  '''
  # Contracts Template — myapp
  
  **Feature**: `<feature-name>`
  **Created**: 2026-03-14
  
  ## API Contract
  
  _Define the interface contract for this feature._
  
  ### Endpoint / Command
  
  ```
  command [arguments] [options]
  ```
  
  ### Arguments
  
  | Argument | Required | Description |
  |----------|----------|-------------|
  
  ### Exit Codes
  
  | Code | Condition |
  |------|-----------|
  
  '''
# ---
# name: TestTemplateRendering.test_data_model_template
  '''
  # Data Model Template — myapp
  
  **Feature**: `<feature-name>`
  **Created**: 2026-03-14
  
  ## Overview
  
  _All domain types for this feature._
  
  ## Core Types
  
  ### `TypeName`
  
  ```
  field: type — description
  ```
  
  '''
# ---
# name: TestTemplateRendering.test_debugger_prompt
  '''
  # Debugger — myapp
  
  You are the Debugger agent for **myapp**.
  
  ## Role
  
  Investigate and resolve bugs using systematic debugging.
  
  ## Instructions
  
  1. Reproduce the issue with a minimal test case
  2. Apply binary search to isolate the root cause
  3. Propose a fix with regression test
  4. Verify the fix doesn't break existing tests
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestTemplateRendering.test_decisions_template
  '''
  # myapp — Decision Log
  
  **Project**: myapp
  **Created**: 2026-03-14
  
  Record key architectural and design decisions here.
  
  ## Template
  
  ### Decision [NUMBER] — [TITLE]
  
  - **Date**: YYYY-MM-DD
  - **Status**: Proposed | Accepted | Deprecated
  - **Context**: _Why was this decision needed?_
  - **Decision**: _What was decided?_
  - **Consequences**: _What changes as a result?_
  
  '''
# ---
# name: TestTemplateRendering.test_feature_specifier_prompt
  '''
  # Feature Specifier — myapp
  
  You are the Feature Specifier agent for **myapp**.
  
  ## Role
  
  Transform a feature description into a complete specification document.
  
  ## Instructions
  
  1. Gather clarifications via targeted questions
  2. Define user stories with acceptance scenarios
  3. Enumerate functional requirements
  4. Identify edge cases and constraints
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestTemplateRendering.test_gitignore_template
  '''
  # myapp — .gitignore
  # Auto-generated by SpecForge
  
  # Python
  __pycache__/
  *.pyc
  *.pyo
  .venv/
  venv/
  *.egg-info/
  dist/
  build/
  
  # Coverage & testing
  .coverage
  .pytest_cache/
  htmlcov/
  
  # Environment
  .env
  .env.*
  
  # OS
  .DS_Store
  Thumbs.db
  *.tmp
  *.swp
  
  '''
# ---
# name: TestTemplateRendering.test_implementation_planner_prompt
  '''
  # Implementation Planner — myapp
  
  You are the Implementation Planner agent for **myapp**.
  
  ## Role
  
  Create a detailed implementation plan from a feature specification.
  
  ## Instructions
  
  1. Analyze the spec and research artifacts
  2. Design the source code structure
  3. Define data models and contracts
  4. Validate against the constitution
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestTemplateRendering.test_plan_template
  '''
  # Implementation Plan Template — myapp
  
  **Branch**: `<branch-name>`
  **Created**: 2026-03-14
  **Spec**: `<path-to-spec.md>`
  
  ## Summary
  
  _High-level description of the implementation approach._
  
  ## Technical Context
  
  _Language, dependencies, testing, constraints._
  
  ## Constitution Check
  
  _Verify compliance with all constitution principles._
  
  ## Project Structure
  
  _Source tree for this feature._
  
  ## Complexity Tracking
  
  | Violation | Why Needed | Simpler Alternative Rejected Because |
  |-----------|------------|--------------------------------------|
  
  '''
# ---
# name: TestTemplateRendering.test_quickstart_template
  '''
  # Quickstart Template — myapp
  
  **Feature**: `<feature-name>`
  **Created**: 2026-03-14
  
  ## Prerequisites
  
  _List required tools and versions._
  
  ## Installation
  
  _Installation steps._
  
  ## Usage
  
  _Common usage patterns._
  
  '''
# ---
# name: TestTemplateRendering.test_research_template
  '''
  # Research Template — myapp
  
  **Feature**: `<feature-name>`
  **Created**: 2026-03-14
  
  ## Research Questions
  
  1. _Question 1_
     - **Finding**: ...
     - **Decision**: ...
  
  ## Key Decisions
  
  | # | Question | Decision | Source |
  |---|----------|----------|--------|
  
  '''
# ---
# name: TestTemplateRendering.test_spec_template
  '''
  # Feature Specification Template — myapp
  
  **Feature Branch**: `<branch-name>`
  **Created**: 2026-03-14
  **Status**: Draft
  
  ## Clarifications
  
  _Record Q&A sessions here._
  
  ## User Scenarios & Testing
  
  ### User Story 1 - [Title] (Priority: P1)
  
  _Description of user scenario._
  
  **Acceptance Scenarios**:
  
  1. **Given** ..., **When** ..., **Then** ...
  
  ## Requirements
  
  ### Functional Requirements
  
  - **FR-001**: ...
  
  ### Constraints & Tradeoffs
  
  - **CT-001**: ...
  
  ## Success Criteria
  
  - **SC-001**: ...
  
  '''
# ---
# name: TestTemplateRendering.test_task_decomposer_prompt
  '''
  # Task Decomposer — myapp
  
  You are the Task Decomposer agent for **myapp**.
  
  ## Role
  
  Break an implementation plan into ordered, dependency-aware tasks.
  
  ## Instructions
  
  1. Read the plan and data model
  2. Generate TDD-ordered tasks (tests before implementation)
  3. Mark parallel tasks with [P]
  4. Assign conventional commit messages
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestTemplateRendering.test_tasks_template
  '''
  # Tasks Template — myapp
  
  **Input**: Design documents
  **Prerequisites**: plan.md (required), spec.md (required)
  
  ## Format: `[ID] [P?] [Story] Description`
  
  - **[P]**: Can run in parallel
  - **[Story]**: User story reference
  
  ## Phase 1: Setup
  
  - [ ] T001 ...
  
  ## Phase 2: Tests
  
  - [ ] T002 ...
  
  ## Phase 3: Implementation
  
  - [ ] T003 ...
  
  '''
# ---
# name: TestTemplateRendering.test_test_writer_prompt
  '''
  # Test Writer — myapp
  
  You are the Test Writer agent for **myapp**.
  
  ## Role
  
  Write comprehensive tests for implementation code.
  
  ## Instructions
  
  1. Write unit tests for all domain logic
  2. Write integration tests for CLI commands
  3. Write snapshot tests for template rendering
  4. Ensure 100% core coverage
  
  ## Context
  
  - **Project**: myapp
  - **Agent**: claude
  - **Stack**: Python
  
  '''
# ---
# name: TestUserOverrideSnapshots.test_override_differs_from_built_in
  '''
  # Custom myapp Constitution
  
  This is a custom constitution for **myapp**.
  
  '''
# ---
